# GammaDDbar

./: CMakeLists.txt  CorrelatedGaussianObservables.cpp  CorrelatedGaussianObservables.h  MixingModel.cpp  MixingModel.h  README.md  compile_classes.sh  compile_main.sh  dato.h  main.cpp  main.x  rescalehistos.cc
All/: log.txt
Bash_scripts/: compile_classes.sh  compile_main.sh
Codes/: CorrelatedGaussianObservables.cpp  MixingModel.cpp  MixingModel.h  histo.cpp  histo.h  main.cpp
Variables/: variables_Allmodes  variables_Allmodes_all  variables_ChargedB  variables_ChargedB_all  variables_D  variables_D_all  variables_NeutralBd  variables_NeutralBd_all  variables_NeutralBs  variables_NeutralBs   variables_NeutralBs_all
nbproject/: Makefile-Debug.mk  Makefile-MPI_parallel.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-MPI_parallel.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  timestamps-ui-01.roma3.infn.it-silvestrini-22  timestamps-ui-02.roma3.infn.it-silvestrini-22
